--- a/notebooks/01 Foundations/Introduction to Data Analytics/1. What is Data Analytics.html
+++ b/notebooks/01 Foundations/Introduction to Data Analytics/1. What is Data Analytics.html
@@ -7536,6 +7536,98 @@ a.anchor-link {
 <p>Data analytics is the practice of examining raw data to uncover patterns, trends, and insights that support decision-making. It can involve simple descriptive analysis (summarizing what happened), diagnostic analysis (understanding why it happened), predictive analysis (forecasting what will happen), and prescriptive analysis (recommending actions).</p>
 <p>While advanced analytics often requires data scientists, modern platforms provide tools such as natural language queries and automated insights that empower business users as well. Data analytics is closely related to business intelligence (BI), which focuses on reporting and visualization, but analytics goes further by applying statistical, computational, and sometimes machine learning techniques to generate forward-looking insight</p>
 <hr/>
+<h2 id="Understanding-the-nature-of-Data">Understanding the nature of Data<a class="anchor-link" href="#Understanding-the-nature-of-Data">¶</a></h2><hr/>
+<p>Data is the central element of data analytics. Everything an analyst does revolves around turning raw data into meaningful insight, and eventually into knowledge that can support real-world decisions.</p>
+<h4 id="When-data-becomes-information">When data becomes information<a class="anchor-link" href="#When-data-becomes-information">¶</a></h4><ul>
+<li>Data represents recorded events—anything that can be measured, categorized, or observed.</li>
+<li>Raw data itself has limited use. Once collected, cleaned, and analyzed, data transforms into information, revealing patterns that help us understand what happened, why it happened, or what may happen next.</li>
+</ul>
+<p>⸻</p>
+<h4 id="When-information-becomes-knowledge">When information becomes knowledge<a class="anchor-link" href="#When-information-becomes-knowledge">¶</a></h4><ul>
+<li>Information turns into knowledge when it forms consistent rules, models, or principles that deepen our understanding of a system.</li>
+<li>Knowledge is what enable the data analyst to:<ul>
+<li>explain mechanisms</li>
+<li>make predictions</li>
+<li>recommend actions confidently</li>
+</ul>
+</li>
+</ul>
+<p><br/><hr style="width: 60%; margin: auto;"/><br/></p>
+<h2 id="Types-of-Data">Types of Data<a class="anchor-link" href="#Types-of-Data">¶</a></h2><p>Data can be broken down into two main categories:</p>
+<h3 id="1.-Categorical-Data">1. Categorical Data<a class="anchor-link" href="#1.-Categorical-Data">¶</a></h3><ul>
+<li>Nominal → categories with no intrinsic order (e.g., gender, product type, city).</li>
+<li>Ordinal → categories with a defined order (e.g., satisfaction rating, education level).</li>
+</ul>
+<h3 id="2.-Numerical-Data">2. Numerical Data<a class="anchor-link" href="#2.-Numerical-Data">¶</a></h3><ul>
+<li>Discrete → countable values with gaps between them (e.g., number of students, number of purchases).</li>
+<li>Continuous → measurable values that can take any value in a range (e.g., height, temperature, time).</li>
+</ul>
+<h4 id="Understanding-data-types-is-crucial-because:">Understanding data types is crucial because:<a class="anchor-link" href="#Understanding-data-types-is-crucial-because:">¶</a></h4><ul>
+<li>It determines which statistical methods to use,</li>
+<li>Which visualizations apply,</li>
+<li>And how data must be cleaned and transformed.</li>
+</ul>
+<p><br/><hr style="width: 60%; margin: auto;"/><br/></p>
+<h3 id="Quantitative-and-Qualitative-Data-Analysis">Quantitative and Qualitative Data Analysis<a class="anchor-link" href="#Quantitative-and-Qualitative-Data-Analysis">¶</a></h3><hr/>
+Data analysis always depends on the nature of the data. Different data types require different analytical approaches.
+<h4 id="Quantitative-Data-Analysis">Quantitative Data Analysis<a class="anchor-link" href="#Quantitative-Data-Analysis">¶</a></h4><ul>
+<li><p>Quantitative analysis deals with data that is numerical or categorical—data that can be counted, measured, or logically ordered.</p>
+</li>
+<li><p>Because quantitative data contains inherent structure (categories, counts, mathematical relationships), analysts can:</p>
+<ul>
+<li>apply statistical methods,</li>
+<li>build mathematical models,</li>
+<li>generate objective conclusions,</li>
+<li>and create quantitative predictions.</li>
+</ul>
+</li>
+<li><p>Examples of quantitative data:</p>
+<ul>
+<li>numbers (age, income, temperature),</li>
+<li>survey ratings,</li>
+<li>categories that can be encoded.</li>
+</ul>
+</li>
+<li><p>Quantitative analysis is highly valuable because:</p>
+<ul>
+<li>it supports reproducible, objective insights,</li>
+<li>results can be statistically validated,</li>
+<li>it enables predictive modeling using machine learning.</li>
+</ul>
+</li>
+</ul>
+<p>⸻</p>
+<h4 id="Qualitative-Data-Analysis">Qualitative Data Analysis<a class="anchor-link" href="#Qualitative-Data-Analysis">¶</a></h4><ul>
+<li><p>Qualitative analysis deals with non-numeric, unstructured data, such as:</p>
+<ul>
+<li>text (interviews, reviews),</li>
+<li>audio recordings,</li>
+<li>images,</li>
+<li>videos,</li>
+<li>open-ended survey responses.</li>
+</ul>
+</li>
+<li><p>Since qualitative data does not have an obvious structure, analysts must use specialized, sometimes ad hoc techniques, such as:</p>
+<ul>
+<li>content analysis,</li>
+<li>thematic coding,</li>
+<li>sentiment analysis,</li>
+<li>natural language processing (NLP).</li>
+</ul>
+</li>
+</ul>
+<p>Qualitative analysis:</p>
+<ul>
+<li>often includes interpretation,</li>
+<li>may produce subjective insights,</li>
+<li>can handle complex systems that cannot be measured numerically (e.g., human behavior, social phenomena),</li>
+<li>helps uncover context and meaning that numbers alone cannot provide.</li>
+</ul>
+<h4 id="Both-qualitative-and-quantitative-approaches-are-essential.">Both qualitative and quantitative approaches are essential.<a class="anchor-link" href="#Both-qualitative-and-quantitative-approaches-are-essential.">¶</a></h4><ul>
+<li>Quantitative answers “how much?”</li>
+<li>Qualitative answers “why?” and “how?”</li>
+</ul>
+<h4 id="Together,-they-provide-a-complete-understanding-of-a-problem.">Together, they provide a complete understanding of a problem.<a class="anchor-link" href="#Together,-they-provide-a-complete-understanding-of-a-problem.">¶</a></h4><hr/>
 <h2 id="Data-Analytics-vs.-Big-Data-vs.-Data-Science">Data Analytics vs. Big Data vs. Data Science<a class="anchor-link" href="#Data-Analytics-vs.-Big-Data-vs.-Data-Science">¶</a></h2><hr/>
 <p>These three terms are often used together, but they are not the same thing. Here’s how they connect:</p>
 <h4 id="--Big-Data">- Big Data<a class="anchor-link" href="#--Big-Data">¶</a></h4><p>Big data refers to the massive amounts of information being created every second—from databases, IoT devices, social media, emails, and more. The role of big data is to provide the raw material. You can think of it as the fuel that powers analytics. The more data available, the richer the insights you can gain.</p>
@@ -7578,6 +7670,110 @@ a.anchor-link {
     - Testing different slogans or ad designs to see which performs best.
     - Recommending the shirt color most likely to appeal to older customers.</p>
 <p>👉 Prescriptive analytics is like a coach, telling you the best move to make.</p>
+<hr/>
+<h2 id="The-Data-Analysis-Process">The Data Analysis Process<a class="anchor-link" href="#The-Data-Analysis-Process">¶</a></h2><hr/>
+Data analysis is a structured process where raw data is transformed into valuable insights. Each stage builds on the one before it:
+<ol>
+<li><p>Problem Definition</p>
+<ul>
+<li>Identify the business question or decision to be made.</li>
+</ul>
+</li>
+<li><p>Data Extraction</p>
+<ul>
+<li>Pulling data from databases, APIs, files, or web scraping.</li>
+</ul>
+</li>
+<li><p>Data Preparation – Cleaning</p>
+<ul>
+<li>Handling missing values, errors, duplicates, and inconsistencies.</li>
+</ul>
+</li>
+<li><p>Data Preparation – Transformation</p>
+<ul>
+<li>Changing formats, encoding categories, scaling values, merging datasets, etc.</li>
+</ul>
+</li>
+<li><p>Data Exploration &amp; Visualization</p>
+<ul>
+<li>Understanding patterns, relationships, anomalies, distributions.</li>
+</ul>
+</li>
+<li><p>Predictive Modeling</p>
+<ul>
+<li>Building statistical or machine learning models based on the data.</li>
+</ul>
+</li>
+<li><p>Model Testing &amp; Validation</p>
+<ul>
+<li>Checking whether the model is reliable, accurate, and generalizable.</li>
+</ul>
+</li>
+<li><p>Visualization &amp; Interpretation of Results</p>
+<ul>
+<li>Communicating insights through dashboards, reports, or presentations.</li>
+</ul>
+</li>
+<li><p>Deployment</p>
+<ul>
+<li>Implementing the solution in real-world systems or business processes.</li>
+</ul>
+</li>
+</ol>
+<hr/>
+<h2 id="Knowledge-Domains-of-data-analysis">Knowledge Domains of data analysis<a class="anchor-link" href="#Knowledge-Domains-of-data-analysis">¶</a></h2><hr/>
+<h4 id="Computer-Science">Computer Science<a class="anchor-link" href="#Computer-Science">¶</a></h4><p>Data analysts rely heavily on software, programming, and digital tools. Strong computer science knowledge allows analysts to efficiently manipulate, clean, store, and analyze data.</p>
+<ul>
+<li>Programming languages are needed for data manipulation, automation, and building models</li>
+<li>Computer science allows us to understand the various formats that data comes in and needs to be manipulated to.<ul>
+<li>CSV, XLS, JSON, XML</li>
+<li>Databases like SQL and NoSQL</li>
+</ul>
+</li>
+<li>Data needs to be extracted<ul>
+<li>SQL queries to pull data</li>
+<li>APIs</li>
+<li>Web Scraping</li>
+</ul>
+</li>
+</ul>
+<p>⸻</p>
+<h4 id="Mathematics-and-Stats">Mathematics and Stats<a class="anchor-link" href="#Mathematics-and-Stats">¶</a></h4><p>Math is the foundation of all analytical methods. Statistics explains why certain insights or patterns appear and helps avoid incorrect conclusions.</p>
+<ul>
+<li>Key concepts like:<ul>
+<li>Probability theory</li>
+<li>Bayesian Methods</li>
+<li>Regression Techniques</li>
+<li>Clustering and Unsupervised Learning</li>
+</ul>
+</li>
+<li>Enables 🔼🔽<ul>
+<li>understanding distributions</li>
+<li>making predictions</li>
+<li>Designing experiments</li>
+<li>validate results</li>
+</ul>
+</li>
+</ul>
+<p>Python libraries (NumPy, SciPy, pandas, scikit-learn) reduce complexity but require conceptual understanding.</p>
+<p>⸻</p>
+<h4 id="Machine-learning">Machine learning<a class="anchor-link" href="#Machine-learning">¶</a></h4><p>While classic data analysis helps you describe what happened, machine learning helps you predict, classify, and automate decision-making by learning patterns directly from the data.</p>
+<ul>
+<li>Automates insight discovery - ML algorithms can analyze millions of data points and uncover patterns that are too subtle or complex for manual analysis.</li>
+</ul>
+<p>For Example,
+    - determining which customers will churn
+    - identifying fraudulent transactions
+    - discovering hidden customer segments</p>
+<ul>
+<li>A data analyst must understand<ul>
+<li>How the model works</li>
+<li>How reliable it is</li>
+<li>What the results actually mean</li>
+</ul>
+</li>
+<li>So that the data analyst can communicate the results and insights to stakeholders</li>
+</ul>
 <p><br/><hr style="width: 60%; margin: auto;"/><br/></p>
 <h3 id="Key-Takeaway">Key Takeaway<a class="anchor-link" href="#Key-Takeaway">¶</a></h3><pre><code>• Descriptive → what happened (reporting).
 • Diagnostic → why it happened (causes).
@@ -7586,6 +7782,21 @@ a.anchor-link {
 
 </code></pre>
 <p>Together, these four levels of analytics move from looking back → understanding → looking forward → taking action.</p>
+<div style="text-align: center;"><a href="https://quiz-brandonfourie.pythonanywhere.com/topic/4" taregt="_blank"> Ready to take the quiz? Take it 👉 here </a></div>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=f697ebea-a932-4864-ba98-790dd9398527">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
 </div>
 </div>
 </div>
