--- a/pyodide.html
+++ b/pyodide.html
@@ -2,279 +2,287 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Python in WebAssembly + Matplotlib + LeetCode</title>
+  <title>Python WebAssembly + LeetCode Editor</title>
+
+  <!-- Pyodide -->
   <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
+
+  <!-- CodeMirror -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.65.16/lib/codemirror.css">
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.65.16/lib/codemirror.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.65.16/mode/python/python.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.65.16/addon/edit/matchbrackets.js"></script>
+
   <style>
     body {
-      font-family: sans-serif;
-      background-color: #1e1e1e;
+      margin: 0;
+      background: #1e1e1e;
       color: white;
-      text-align: center;
-      padding: 2rem;
+      font-family: sans-serif;
+      height: 100vh;
+      overflow: hidden;
     }
-    #container { width: 80%; margin: auto; }
-    textarea {
-      width: 100%;
-      height: 300px;
-      background-color: #2b2b2b;
-      color: #fff;
-      caret-color: white;
-      font-family: monospace;
-      font-size: 16px;
-      padding: 10px;
-      border: 1px solid #444;
+
+    #app {
+      display: flex;
+      height: 100vh;
+    }
+
+    /* LEFT: PROBLEM PANEL */
+    #problem-panel {
+      width: 35%;
+      min-width: 320px;
+      max-width: 45%;
+      background: #252526;
+      border-right: 1px solid #333;
+      padding: 1rem;
+      overflow-y: auto;
+    }
+
+    #problem-panel.hidden {
+      display: none;
+    }
+
+    /* RIGHT: EDITOR PANEL */
+    #editor-panel {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      padding: 1rem;
+      overflow: hidden;
+    }
+
+    .toolbar {
+      display: flex;
+      gap: 0.5rem;
+      margin-bottom: 0.5rem;
+      flex-wrap: wrap;
+    }
+
+    button {
+      padding: 8px 14px;
+      font-size: 14px;
+      cursor: pointer;
       border-radius: 6px;
-      resize: vertical;
-      white-space: pre;
-      overflow: auto;
-      outline: none;
+      border: none;
     }
+
     pre {
-      white-space: pre-wrap;
       background: #333;
       padding: 1rem;
-      margin-top: 1rem;
-      border-radius: 5px;
-      text-align: left;
-      color: #eee;
-    }
-    #plot img {
-      margin-top: 1rem;
-      border: 1px solid #666;
       border-radius: 6px;
+      overflow-y: auto;
+      max-height: 160px;
+    }
+
+    #plot img {
       max-width: 100%;
-      background-color: white;
+      background: white;
+      margin-top: 0.5rem;
+      border-radius: 6px;
     }
-    button {
-      margin: 0.5rem;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
+
+    /* CodeMirror Styling */
+    .CodeMirror {
+      height: 100%;
+      font-size: 15px;
+      background: #1e1e1e;
+      color: #fff;
+      border-radius: 6px;
     }
-    details { margin-top: 1rem; text-align: left; }
-    summary { cursor: pointer; font-weight: bold; font-size: 16px; }
-    ul { line-height: 1.6; margin-left: 20px; }
-    #problem-display { text-align:left; background:#2b2b2b; padding:1rem; border-radius:6px; margin-bottom:1rem; margin-top:2rem; }
+
+    .CodeMirror-gutters {
+      background: #1e1e1e;
+      border-right: 1px solid #333;
+    }
+
+    #editor-wrapper {
+      flex: 1;
+      overflow: hidden;
+      margin-bottom: 0.5rem;
+    }
+
+    #problem-title a {
+      margin-left: 0.5rem;
+    }
+    
+    /* ===== Improve CodeMirror cursor visibility ===== */
+.CodeMirror-cursor {
+  border-left: 2px solid #00ffff !important; /* bright cyan */
+}
+
+.CodeMirror-focused .CodeMirror-cursor {
+  border-left: 2px solid #00ffff !important;
+}
+
+/* Optional: subtle line highlight where cursor is */
+.CodeMirror-activeline-background {
+  background: rgba(255, 255, 255, 0.04);
+}
   </style>
 </head>
-<body>
-  <div id="container">
-    <h1>WebAssembly Python + Matplotlib + LeetCode</h1>
 
-    <textarea id="code" spellcheck="false">
+<body>
+<div id="app">
+
+  <!-- ================= PROBLEM PANEL ================= -->
+  <div id="problem-panel">
+    <h2 id="problem-title">LeetCode Problem</h2>
+    <div id="problem-description">
+      Load a problem to begin.
+    </div>
+
+    <hr>
+
+    <button onclick="loadProblem('Easy')">🎯 Easy</button>
+    <button onclick="loadProblem('Medium')">⚖️ Medium</button>
+    <button onclick="loadProblem('Hard')">🔥 Hard</button>
+
+    <details style="margin-top:1rem;">
+      <summary>🔍 Search Problems</summary>
+      <input id="search-input" placeholder="Search..." style="width:100%; margin-top:0.5rem;">
+      <button onclick="searchProblems()">Search</button>
+      <ul id="search-results"></ul>
+    </details>
+  </div>
+
+  <!-- ================= EDITOR PANEL ================= -->
+  <div id="editor-panel">
+
+    <div class="toolbar">
+      <button onclick="runCode()">▶ Run (⌘+B)</button>
+      <button onclick="saveCodeCache()">💾 Save</button>
+      <button onclick="resetCodeCache()">🧹 Reset</button>
+      <button onclick="toggleProblem()">👁 Toggle Problem</button>
+    </div>
+
+    <div id="editor-wrapper">
+      <textarea id="code">
 import matplotlib.pyplot as plt
 import numpy as np
 
 x = np.linspace(0, 10, 100)
 y = np.sin(x)
 
-plt.plot(x, y, color='limegreen', linewidth=2)
-plt.title("Sine Wave Example")
-plt.xlabel("X values")
-plt.ylabel("sin(X)")
-plt.grid(True)
-    </textarea>
-    <br>
-    <button onclick="runCode()">▶ Run (⌘ + B)</button>
-    <button onclick="saveCodeCache()">💾 Save Code</button>
-    <button onclick="resetCodeCache()">🧹 Reset</button>
+plt.plot(x, y)
+plt.show()
+      </textarea>
+    </div>
 
-    <pre id="output">(Program output will appear here)</pre>
-    <h3>Plots:</h3>
+    <pre id="output">(Output)</pre>
     <div id="plot"></div>
 
-    <details>
-      <summary>🔍 Search LeetCode Problems</summary>
-      <div style="margin-top: 1rem;">
-        <input id="search-input" type="text" placeholder="Search by title or keyword..." style="padding: 10px; width: 60%; font-size: 16px; border-radius: 6px; border: 1px solid #666; background-color: #2b2b2b; color: white;">
-        <button onclick="searchProblems()">Search</button>
-        <ul id="search-results" style="margin-top: 1rem;"></ul>
-      </div>
-    </details>
-
-    <div id="problem-display">
-      <h2 id="problem-title">Random LeetCode Problem</h2>
-      <p id="problem-description">Click a button below to load a random problem.</p>
-    </div>
-
-    <div>
-      <button onclick="loadProblem('Easy')">🎯 Random Easy</button>
-      <button onclick="loadProblem('Medium')">⚖️ Random Medium</button>
-      <button onclick="loadProblem('Hard')">🔥 Random Hard</button>
-    </div>
   </div>
+</div>
 
 <script>
+let editor;
 let pyodideReady = false;
 let leetcodeData = [];
 
-async function main() {
-  window.pyodide = await loadPyodide();
-  await pyodide.loadPackage(["matplotlib", "numpy", "pandas"]);
-  pyodideReady = true;
+editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+  mode: "python",
+  theme: "default",
+  lineNumbers: true,
+  indentUnit: 4,
+  tabSize: 4,
+  indentWithTabs: false,
+  matchBrackets: true,
+  electricChars: true
+});
 
-  try {
-    const response = await fetch("leetcode_dataset_clean.json");
-    leetcodeData = await response.json();
-  } catch (err) {
-    console.error("❌ Failed to load dataset", err);
-    document.getElementById("output").textContent = "❌ Failed to load problem dataset.";
-  }
-
-  const saved = localStorage.getItem("userPythonCode");
-  if (saved) document.getElementById("code").value = saved;
-}
-
-main();
-
-function saveCodeCache() {
-  const code = document.getElementById("code").value;
-  localStorage.setItem("userPythonCode", code);
-  alert("✅ Code saved to cache.");
-}
-
-function resetCodeCache() {
-  if (confirm("Clear saved code?")) {
-    localStorage.removeItem("userPythonCode");
-    document.getElementById("code").value = "";
-    alert("🧹 Cache cleared.");
-  }
-}
-
-async function runCode() {
-  const output = document.getElementById("output");
-  const plotDiv = document.getElementById("plot");
-  plotDiv.innerHTML = "";
-  if (!pyodideReady) { output.textContent = "Loading Pyodide..."; return; }
-
-  const code = document.getElementById("code").value;
-
-  try {
-    await pyodide.runPythonAsync(`
-import sys, io, base64, matplotlib
-matplotlib.use("AGG")
-import matplotlib.pyplot as plt
-sys.stdout = io.StringIO()
-sys.stderr = sys.stdout
-    `);
-
-    await pyodide.runPythonAsync(code);
-
-    const textOutput = await pyodide.runPythonAsync("sys.stdout.getvalue()");
-    output.textContent = textOutput || "(No output)";
-
-    const imgs = await pyodide.runPythonAsync(`
-import matplotlib.pyplot as plt, io, base64
-imgs = []
-for i in plt.get_fignums():
-    buf = io.BytesIO()
-    plt.figure(i).savefig(buf, format='png', bbox_inches='tight')
-    plt.close(i)
-    buf.seek(0)
-    imgs.append("data:image/png;base64," + base64.b64encode(buf.read()).decode())
-imgs
-    `);
-
-    for (const src of imgs) {
-      const img = document.createElement("img");
-      img.src = src;
-      plotDiv.appendChild(img);
+editor.on("keydown", (cm, e) => {
+  if (e.key === "Enter") {
+    const line = cm.getLine(cm.getCursor().line);
+    if (line.trim().endsWith(":")) {
+      setTimeout(() => cm.replaceSelection("    "), 0);
     }
-
-  } catch(err) {
-    output.textContent = "❌ Error:\n" + err;
   }
-}
 
-// Run with ⌘+B
-document.getElementById("code").addEventListener("keydown", (e) => {
   if (e.key.toLowerCase() === "b" && e.metaKey) {
     e.preventDefault();
     runCode();
   }
 });
 
-// --- LeetCode Problem Functions ---
-function searchProblems() {
-  const query = document.getElementById("search-input").value.toLowerCase().trim();
-  const resultsList = document.getElementById("search-results");
-  resultsList.innerHTML = "";
-  if (!query || leetcodeData.length === 0) {
-    resultsList.innerHTML = "<li>No search term entered or data not loaded.</li>";
-    return;
-  }
-  const results = leetcodeData.filter(
-    item =>
-      item.title.toLowerCase().includes(query) ||
-      (item.description && item.description.toLowerCase().includes(query))
-  ).slice(0, 25);
+async function main() {
+  window.pyodide = await loadPyodide();
+  await pyodide.loadPackage(["matplotlib", "numpy", "pandas"]);
+  pyodideReady = true;
 
-  if (results.length === 0) {
-    resultsList.innerHTML = "<li>No matches found.</li>";
-    return;
-  }
-
-  for (const result of results) {
-    const li = document.createElement("li");
-    li.innerHTML = `<strong style="color:lightgreen;">${result.title}</strong> - <a style="color: lightblue;" href="#" onclick="showProblemById(${result.id}); return false;">View</a>`;
-    resultsList.appendChild(li);
-  }
-}
-
-async function loadProblem(difficulty) {
-  const output = document.getElementById("output");
-  if (!pyodideReady) { output.textContent = "Loading Pyodide..."; return; }
+  const saved = localStorage.getItem("userPythonCode");
+  if (saved) editor.setValue(saved);
 
   try {
-    const filtered = leetcodeData.filter(
-      item =>
-        item.difficulty.toLowerCase() === difficulty.toLowerCase() &&
-        item.description &&
-        item.description.toLowerCase() !== "none" &&
-        item.description.toLowerCase() !== "sql schema"
-    );
-    if (filtered.length === 0) {
-      output.textContent = `❌ No ${difficulty} problems found with valid descriptions.`;
-      return;
-    }
-    const row = filtered[Math.floor(Math.random() * filtered.length)];
-    showProblemById(row.id);
-  } catch (err) {
-    output.textContent = "❌ Error loading problem:\n" + err;
+    const r = await fetch("leetcode_dataset_clean.json");
+    leetcodeData = await r.json();
+  } catch {
+    document.getElementById("output").textContent = "❌ Failed to load problems.";
+  }
+}
+main();
+
+function toggleProblem() {
+  document.getElementById("problem-panel").classList.toggle("hidden");
+}
+
+function saveCodeCache() {
+  localStorage.setItem("userPythonCode", editor.getValue());
+  alert("Saved!");
+}
+
+function resetCodeCache() {
+  if (confirm("Clear saved code?")) {
+    editor.setValue("");
+    localStorage.removeItem("userPythonCode");
   }
 }
 
-function showProblemById(id) {
-  const item = leetcodeData.find(p => p.id === id);
-  if (!item) {
-    document.getElementById("output").textContent = "❌ Problem not found.";
+async function runCode() {
+  const output = document.getElementById("output");
+  const plot = document.getElementById("plot");
+  plot.innerHTML = "";
+
+  if (!pyodideReady) {
+    output.textContent = "Loading...";
     return;
   }
 
-  const { title, description, url, difficulty } = item;
-  const diff = difficulty.toLowerCase();
-  let color = "#fff";
-  if (diff === "easy") color = "limegreen";
-  else if (diff === "medium") color = "goldenrod";
-  else if (diff === "hard") color = "tomato";
+  try {
+    await pyodide.runPythonAsync(`
+import sys, io, matplotlib
+matplotlib.use("AGG")
+import matplotlib.pyplot as plt
+sys.stdout = io.StringIO()
+sys.stderr = sys.stdout
+    `);
 
-  function escapeHtml(text) {
-    return text.replace(/[&<>"']/g, function (m) {
-      return { '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;' }[m];
+    await pyodide.runPythonAsync(editor.getValue());
+
+    output.textContent =
+      await pyodide.runPythonAsync("sys.stdout.getvalue()") || "(No output)";
+
+    const imgs = await pyodide.runPythonAsync(`
+import base64, io
+imgs=[]
+for i in plt.get_fignums():
+    buf=io.BytesIO()
+    plt.figure(i).savefig(buf, format="png")
+    buf.seek(0)
+    imgs.append("data:image/png;base64,"+base64.b64encode(buf.read()).decode())
+    plt.close(i)
+imgs
+    `);
+
+    imgs.forEach(src => {
+      const img = document.createElement("img");
+      img.src = src;
+      plot.appendChild(img);
     });
+
+  } catch (err) {
+    output.textContent = err;
   }
-
-  let htmlDesc = escapeHtml(description)
-    .replace(/`([^`]+)`/g, '<code>$1</code>')
-    .replace(/\n\n/g, '<br><br>')
-    .replace(/\n/g, '<br>');
-
-  document.getElementById("problem-title").innerHTML =
-    `<span style="color:${color}; font-weight:bold;">#${id} - ${title}</span> <a href="${url}" target="_blank" style="color:#66f">(View)</a>`;
-  document.getElementById("problem-description").innerHTML = htmlDesc;
-
-  const problemMeta = { id, title, url, description };
-  localStorage.setItem("activeProblemMeta", JSON.stringify(problemMeta));
 }
 </script>
 </body>
