--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>My Learning</title>
 <link rel='stylesheet' href='assets/lms.css'>
 <script src='https://cdn.jsdelivr.net/npm/chart.js'></script>
+<script src='assets/notebook.js'></script>
 </head><body>
 <nav class='lms-navbar'>
   <div class='nav-left'><span class='lms-logo'>🎓 My Learning</span></div>
@@ -173,6 +174,14 @@
                           <a class="lesson-link" href="notebooks/Python /Crash Course/Chapter 05 - If Statements.html" target="_blank">
                             <span class="lesson-icon">📘</span>
                             <span class="lesson-title">Chapter 05 - if statements</span>
+                          </a>
+                        </div>
+                        
+
+                        <div class="lesson-item">
+                          <a class="lesson-link" href="notebooks/Python /Crash Course/Chapter 06 - Dictionaries.html" target="_blank">
+                            <span class="lesson-icon">📘</span>
+                            <span class="lesson-title">Chapter 06 - dictionaries</span>
                           </a>
                         </div>
                         
@@ -427,10 +436,10 @@
       new Chart(ctx, {
         type: "bar",
         data: {
-          labels: ["Dec 17", "Dec 18", "Dec 19", "Dec 20", "Dec 21", "Dec 22", "Dec 23", "Dec 24", "Dec 25", "Dec 26", "Dec 27", "Dec 28", "Dec 29", "Dec 30", "Dec 31", "Jan 01", "Jan 02", "Jan 03", "Jan 04", "Jan 05", "Jan 06", "Jan 07", "Jan 08", "Jan 09", "Jan 10", "Jan 11", "Jan 12", "Jan 13", "Jan 14", "Jan 15"],
+          labels: ["Dec 21", "Dec 22", "Dec 23", "Dec 24", "Dec 25", "Dec 26", "Dec 27", "Dec 28", "Dec 29", "Dec 30", "Dec 31", "Jan 01", "Jan 02", "Jan 03", "Jan 04", "Jan 05", "Jan 06", "Jan 07", "Jan 08", "Jan 09", "Jan 10", "Jan 11", "Jan 12", "Jan 13", "Jan 14", "Jan 15", "Jan 16", "Jan 17", "Jan 18", "Jan 19"],
           datasets: [{
             label: "Notebooks Updated",
-            data: [1, 3, 17, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 2],
+            data: [1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 2, 0, 0, 1, 0],
             backgroundColor: "#1f7a5c",
             borderRadius: 6
           }]
