--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
                           </a>
                         </div>
                         
+
+                        <div class="lesson-item">
+                          <a class="lesson-link" href="notebooks/Python /Crash Course/Chapter 07 - User Input and While Loops.html" target="_blank">
+                            <span class="lesson-icon">📘</span>
+                            <span class="lesson-title">Chapter 07 - user input and while loops</span>
+                          </a>
+                        </div>
+                        
 </div>
 </details>
 </details>
@@ -436,10 +444,10 @@
       new Chart(ctx, {
         type: "bar",
         data: {
-          labels: ["Dec 21", "Dec 22", "Dec 23", "Dec 24", "Dec 25", "Dec 26", "Dec 27", "Dec 28", "Dec 29", "Dec 30", "Dec 31", "Jan 01", "Jan 02", "Jan 03", "Jan 04", "Jan 05", "Jan 06", "Jan 07", "Jan 08", "Jan 09", "Jan 10", "Jan 11", "Jan 12", "Jan 13", "Jan 14", "Jan 15", "Jan 16", "Jan 17", "Jan 18", "Jan 19"],
+          labels: ["Dec 22", "Dec 23", "Dec 24", "Dec 25", "Dec 26", "Dec 27", "Dec 28", "Dec 29", "Dec 30", "Dec 31", "Jan 01", "Jan 02", "Jan 03", "Jan 04", "Jan 05", "Jan 06", "Jan 07", "Jan 08", "Jan 09", "Jan 10", "Jan 11", "Jan 12", "Jan 13", "Jan 14", "Jan 15", "Jan 16", "Jan 17", "Jan 18", "Jan 19", "Jan 20"],
           datasets: [{
             label: "Notebooks Updated",
-            data: [1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 2, 0, 0, 1, 0],
+            data: [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 2, 0, 0, 1, 0, 1],
             backgroundColor: "#1f7a5c",
             borderRadius: 6
           }]
